fix: Fix spacing of nested conditional form elements from Design System
This resets the bottom margin when form elements such as textareas
are nested within existing items like checkboxes or radios.

--- a/common/assets/scss/overrides/_govuk-frontend.scss
+++ b/common/assets/scss/overrides/_govuk-frontend.scss
@@ -13,6 +13,14 @@
   }
 }
 
+.govuk-checkboxes__conditional,
+.govuk-radios__conditional {
+  .govuk-textarea,
+  &:last-of-type {
+    margin-bottom: 0;
+  }
+}
+
 .govuk-hint * {
   color: $govuk-secondary-text-colour;
 }
